
The EntityProcessor API has been simplified by moving logic for applying transformers and handling multi-row outputs
from Transformers into an EntityProcessorWrapper class. The EntityProcessor#destroy is now called once per
parent-row at the end of row (end of data). A new method EntityProcessor#close is added which is called at the end
of import.

Detailed Change List
----------------------

New Features
----------------------
1. SOLR-768:  Set last_index_time variable in full-import command.
              (Wojtek Piaseczny, Noble Paul via shalin)

2. SOLR-811:  Allow a "deltaImportQuery" attribute in SqlEntityProcessor which is used for delta imports
              instead of DataImportHandler manipulating the SQL itself.
              (Noble Paul via shalin)

3. SOLR-842:  Better error handling in DataImportHandler with options to abort, skip and continue imports.
              (Noble Paul, shalin)

4. SOLR-833:  A DataSource to read data from a field as a reader. This can be used, for example, to read XMLs
              residing as CLOBs or BLOBs in databases.
              (Noble Paul via shalin)

5. SOLR-887:  A Transformer to strip HTML tags.
              (Ahmed Hammad via shalin)

6. SOLR-886:  DataImportHandler should rollback when an import fails or it is aborted
              (shalin)

7. SOLR-891:  A Transformer to read strings from Clob type.
              (Noble Paul via shalin)

8. SOLR-812:  Configurable JDBC settings in JdbcDataSource including optimized defaults for read only mode.
              (David Smiley, Glen Newton, shalin)

9. SOLR-910:  Add a few utility commands to the DIH admin page such as full import, delta import, status, reload config.
              (Ahmed Hammad via shalin)

10.SOLR-938:  Add event listener API for import start and end.
              (Kay Kay, Noble Paul via shalin)

11.SOLR-801:  Add support for configurable pre-import and post-import delete query per root-entity.
              (Noble Paul via shalin)
